crates/pixi_build_r/src/snapshots/pixi_build_r__build_script__tests__build_script@windows-native-with-extra-args.snap
---
source: crates/pixi_build_r/src/build_script.rs
expression: script
---
R.exe --version
@if errorlevel 1 exit 1



if not exist "%LIBRARY_PREFIX%\R\library" mkdir "%LIBRARY_PREFIX%\R\library"
@if errorlevel 1 exit 1



R.exe CMD INSTALL --library=%LIBRARY_PREFIX%\R\library ^
    --no-lock ^
    --no-multiarch ^
    /path/to/package


@if errorlevel 1 exit 1
